--- a/.github/workflows/push_page.yml
+++ b/.github/workflows/push_page.yml
@@ -38,7 +38,4 @@ jobs:
     - name: Push Changes
       run: |
         cd target_repo
-        git push origin main
-      with:
-        personal_token: ${{ secrets.StaryLan }}
-        
+        git push origin main --token ${{ secrets.StaryLan }}
