--- a/.github/workflows/push_page.yml
+++ b/.github/workflows/push_page.yml
@@ -37,7 +37,9 @@ jobs:
 
     - name: Push Changes
       run: |
+        mkdir -p /root/.ssh
+        echo "${{ secrets.StaryLan }}" > /root/.ssh/id_rsa
+        chmod 600 /root/.ssh/id_rsa
+        git remote add destination "git@github.com:SapphireLab/SapphireLab.github.io.git"
         cd target_repo
-        git push origin main
-      permissions:
-        contents: write
+        git push destination main
