--- a/.github/workflows/push_page.yml
+++ b/.github/workflows/push_page.yml
@@ -10,7 +10,7 @@ jobs:
       uses: andstor/copycat-action@v3
       with:
         personal_token: ${{ secrets.COPY }}
-        src_path: /Papers/
+        src_path: Papers/
         dst_path: /docs/TTS/
         dst_owner: SapphireLab
         dst_repo_name: SapphireLab.github.io
